Modificação na seção contato e de redes sociais

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Nesta página você verá alguns dos desenhos do aluno Manoel Patrício. O aluno é participante das oficinas de robótica e programação da Casa Durval, onde também participa das oficinas de desenho com o professor Ricardo Tinoco. Foi através desse contato com o professor e a oficina que o Manoel tomou gosto pela arte.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Nesta página você verá alguns dos desenhos do aluno Manoel Patrício. O aluno é participante das oficinas de robótica e programação da Casa Durval, onde também participa das oficinas de desenho com o professor Ricardo Tinôco. Foi através desse contato com o professor e a oficina que o Manoel tomou gosto pela arte.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Manoel tem 20 anos e desde os 10 anos que tem contato direto com as oficinas de desenho. Neste site voce encontrará algum dos mais belos desenhos feitos pelo aluno, que viu na oficina de robótica, uma oportunidade de mostrar seus desenhos na internet através de um site criado por ele com o auxílio do seu professor de robótica e programação. Além disso, vocês também poderão acompanhar a sua evolução quanto desenhista.</p></div>
                 </div>
                 <!-- Foto de divulgação -->
@@ -144,15 +144,15 @@
 
             </div>
         </section>
-        <!-- Contact Section-->
+        <!-- Seção contato-->
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-                <!-- Icon Divider-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Entre em contato</h2>
+                <!-- Ícone divisor -->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-pen-nib"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Form-->
@@ -166,50 +166,50 @@
                         <!-- https://startbootstrap.com/solution/contact-forms-->
                         <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
+                            <!-- Inserção do nome -->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                <label for="name">Nome completo</label>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Campo obrigatório.</div>
                             </div>
-                            <!-- Email address input-->
+                            <!-- Inserção do endereço de e-mail -->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <label for="email">Endereço de e-mail</label>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">Campo obrigatório.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">E-mail inválido.</div>
                             </div>
-                            <!-- Phone number input-->
+                            <!-- Inserção do número de telefone -->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <label for="phone">Número de telefone</label>
+                                <div class="invalid-feedback" data-sb-feedback="phone:required">Campo obrigatório.</div>
                             </div>
-                            <!-- Message input-->
+                            <!-- Campo da mensagem -->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <label for="message">Mensagem</label>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">Campo obrigatório.</div>
                             </div>
-                            <!-- Submit success message-->
+                            <!-- Submissão do formulário -->
                             <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
+                            <!-- Isso é o que o usúario vai ver quando -->
+                            <!-- submeter o formulário com sucesso-->
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
+                                    <div class="fw-bolder">Formulário submetido com sucesso!</div>
+                                    <!-- To activate this form, sign up at
                                     <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a> -->
                                 </div>
                             </div>
-                            <!-- Submit error message-->
+                            <!-- Mensagem de erro-->
                             <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                            <!-- Isso é o que o usuário vai ver quando -->
+                            <!-- acontecer um erro na submissão -->
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar a mensagem!</div></div>
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Enviar</button>
                         </form>
                     </div>
                 </div>
@@ -220,40 +220,40 @@
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                   <!--  <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
                             2215 John Daniel Drive
                             <br />
                             Clark, MO 65243
                         </p>
-                    </div>
-                    <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                    </div> -->
+                    <!-- Redes sociais -->
+                    <div class="row-align-items-center">
+                        <h4 class="text-uppercase mb-4">Redes sociais</h4>
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a> -->
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://instagram.com/manoelpatricio3?utm_medium=copy_link"><i class="fab fa-fw fa-instagram"></i></a>
                     </div>
                     <!-- Footer About Text-->
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </footer>
-        <!-- Copyright Section-->
+        <!-- Seção Copyright-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2021</small></div>
+            <div class="container"><small>Copyright &copy; Manoel Patrício 2021</small></div>
         </div>
-        <!-- Portfolio Modals-->
-        <!-- Portfolio Modal 1-->
+        <!-- Modal do portfólio-->
+        <!-- Modal Juliette -->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -285,7 +285,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 2-->
+        <!-- Modal Gatinho -->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -317,7 +317,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 3-->
+        <!-- Modal do leão -->
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -349,7 +349,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 4-->
+        <!-- Modal dos senhores -->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -381,7 +381,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 5-->
+        <!-- Modal do Damon Salvatore -->
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-labelledby="portfolioModal5" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -413,7 +413,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 6-->
+        <!-- Modal do T800 -->
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
