Inserção do texto nas fotos do modal e modificação do favicon

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-15 at 09.01.50.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Teste</p>
+                                    <p class="mb-4">Desenho realista em homenagem a vencedora do BBB Juliete.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
@@ -305,7 +305,7 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-15 at 09.01.53 (1).jpeg" alt="..." />
                                     <!-- Texto do Modal-->
-                                    <p class="mb-4">Texto</p>
+                                    <p class="mb-4">Desenho realista de um filhote de gato feito em 05/01/2018.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
@@ -337,7 +337,27 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-15 at 09.01.53.jpeg" alt="..." />
                                     <!-- Texto do Modal-->
-                                    <p class="mb-4">Texto</p>
+                                    <p class="mb-4">Desenho realista de um leão com seu filhote que acompanha uma poesia feito em 12/02/2018.</p>
+                                    Desenhos<br>
+                                    <br>
+                                    Com o lápis e o papel<br>
+                                    Formas vão sendo criadas<br>
+                                    Na ponta do lápis<br>
+                                    E o que era vazio<br>
+                                    Se tranfosrma em arte<br>
+                                    <br>
+                                    A inspiração colocada no papel<br>
+                                    Torna meu leão tão realista<br>
+                                    A ponto de quase senti-lo vivio<br>
+                                    Numa planície sobre minha vista<br>
+                                    <br>
+                                    Vendo o modelo eu desenho e imito<br>
+                                    Traço e forma<br>
+                                    Seguindo cada ensinamento<br>
+                                    Em mestre o aluno se transforma<br>
+                                    <br>
+                                    <br>
+                                    Manoel Patricio, 12/02/2018<br>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
@@ -369,7 +389,7 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-15 at 09.01.52.jpeg" alt="..." />
                                     <!-- Texto -->
-                                    <p class="mb-4">Texto</p>
+                                    <p class="mb-4">Desenho feito sob encomenda  para os meus tios.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
@@ -401,7 +421,7 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-29 at 09.03.11.jpeg" alt="..." />
                                     <!-- Texto do Modal-->
-                                    <p class="mb-4">Texto</p>
+                                    <p class="mb-4">Desenho realista feito em 22/10/2018 para presentear minha irmã que e fã dele.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
@@ -433,7 +453,7 @@
                                     <!-- Imagem do Modal-->
                                     <img class="img-fluid rounded mb-5" src="WhatsApp Image 2021-06-29 at 09.03.13.jpeg" alt="..." />
                                     <!-- Texto do Modal-->
-                                    <p class="mb-4">Texto</p>
+                                    <p class="mb-4">Desenho realista realista do T800 da saga de filmes o exterminador do futuro feito em 05/12/2019.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Fechar Janela
