Inserção da rede social whatsapp

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <h4 class="text-uppercase mb-4">Redes sociais</h4>
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a> -->
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
-                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://wa.me/558487614414?text=Eu%20tenho%20interesse%20em%20saber%20sobre%20seus%20desenhos!"><i class="fab fa-fw fa-whatsapp"></i></a> 
                         <a class="btn btn-outline-light btn-social mx-1" href="https://instagram.com/manoelpatricio3?utm_medium=copy_link"><i class="fab fa-fw fa-instagram"></i></a>
                     </div>
                     <!-- Footer About Text-->
